[gd_scene load_steps=3 format=3 uid="uid://clgpjiy6dtub8"]

[ext_resource type="Script" path="res://addons/twitcher/editor/setting_window.gd" id="1_b361f"]

[sub_resource type="LabelSettings" id="LabelSettings_71vpn"]
font_size = 24

[node name="Twitcher Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b361f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AuthTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Authorization"
label_settings = SubResource("LabelSettings_71vpn")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ClientIdTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Client ID: "

[node name="ClientIdInput" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1ae0idgxbvn6vi97ls7d89cyd919oq"

[node name="ClientSecretTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Client Secret: "

[node name="ClientSecretInput" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
secret = true

[node name="FlowTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Auth Flow:"

[node name="FlowInput" type="OptionButton" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Overlay (Auth Code Flow)"
popup/item_1/text = "Game (Device Code)"
popup/item_1/id = 1
popup/item_2/text = "Game (Implicit Flow / not recommended)"
popup/item_2/id = 2
popup/item_3/text = "Userless Authentication (Client Credentials)"
popup/item_3/id = 3

[node name="TokenValidTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Token Valid:"

[node name="TokenValidValue" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "expired"

[node name="RefreshTokenTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Refresh Token Available:"

[node name="RefreshTokenValue" type="CheckBox" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Available"

[node name="TokenScopeTitle" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Token Scope:"

[node name="TokenScopeValue" type="TextEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3
text = "[]"
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ReloadToken" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reload Token"

[node name="RemoveToken" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove Token"

[node name="CacheTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cache"
label_settings = SubResource("LabelSettings_71vpn")
horizontal_alignment = 1

[node name="ClearEmotes" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Emotes (deletes the content of the cache folder)"

[node name="ClearBadges" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Badges (deletes the content of the cache folder)"
